src/test/deca/context/invalid/personalTests/TypeIncompatible3.deca
// Erreur de compilation

{
   bool b = "Hello" == 5;
}